--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   weather_animation: ^1.1.1
   geocoding: ^3.0.0
   intl: ^0.20.1
+  razorpay_flutter: ^1.3.7
 
 dev_dependencies:
   flutter_test:
