--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   geocoding: ^3.0.0
   intl: ^0.20.1
   razorpay_flutter: ^1.3.7
+  url_launcher: ^6.3.1
+  url_launcher_android: ^6.3.14
 
 dev_dependencies:
   flutter_test:
