--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   razorpay_flutter: ^1.3.7
   url_launcher: ^6.3.1
   url_launcher_android: ^6.3.14
+  path_provider: ^2.1.5
+  open_file: ^3.5.10
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
